tests/NormalTests/paczka1/fuzzy1/27082685.err
Error in line 20: IthwvGPrq A123 53,0
Error in line 24: IthwvGPrq A70 15,2
Error in line 28: IthwvGPrq A134 76,5
Error in line 19: 0p8D A123 13,6
